--- a/Mygit2.htm
+++ b/Mygit2.htm
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello git</title>
+    <title>Hello git2</title>
 </head>
 <body>
     <div>
-        Hello git
+        Hello git2
     </div>
 </body>
 </html>
